# waterrower3

./: README.md  datalogreplayer.py  foo.py  replay.py  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  waterrower3.py
debian/: changelog  control  rules
test/: google_sheets_test.py  serial_interface_test.py
waterrower3/: collector.py  file_interface.py  google_sheets.py  packet.py  replay.py  serial_interface.py  session.py  util.py
