[metadata]
name = waterrower3
summary = Python collector for WaterRower Monitor 3
author = Nathan A. Ferch
author_email = nf@marginal.net
description-file = README.md
url = https://github.com/nferch/waterrower3
requires-python = >=2.7
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Framework :: Twisted
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License

[files]
packages =
    waterrower3

[entry_points]
console_scripts =
    collector = waterrower3.collector:main
    replay = waterrower3.replay:main

[global]
setup-hooks =
    pbr.hooks.setup_hook
